apps/monitoring/grafana/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.4.2
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /etc/grafana/provisioning
        - name: dashboards
          mountPath: /tmp/dashboards
      - name: grafana-sc-dashboard
        image: kiwigrid/k8s-sidecar:latest
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: dashboards
          mountPath: /tmp/dashboards
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: grafana-config
      - name: dashboards
        emptyDir: {}
