apps/monitoring/grafana/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`grafana.fle.api64.de`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
  tls:
    certResolver: default
